16743
Compiler will not accept the line,

{{val c: Char = '\u005C'}}

The error message on the console from 2.10.0-M1 is

<console>:1: error: unclosed character literal
       val c: Char = '\005C'
                     ^

Instead I expect to see,

c: Char = \


(The specified character is the _backslash_ character.)
